--- a/index.html
+++ b/index.html
@@ -10,45 +10,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<sidebar class="sidebar-menu">
-    <div class="sidebar-container">
-        <div class="sidebar-wrap">
-<!--            <img src="css/images/sidebar.jpg" alt="Desctop">-->
-            <img class="avatar" src="css/images/avatar.jpg" alt="Photo">
-            <div class="sidebar-content">
-            <h4>Дмитрий Валак</h4>
-            <h3>блог front-end разработчика</h3>
-            </div>
+<div class="root-container">
+<!--`SideBar`-->
+        <div class="sidebar-container">
+            <div class="sidebar-wrap">
+                <img class="avatar" src="css/images/avatar2.png" alt="Photo">
+                <div class="sidebar-content">
+                <h4>Дмитрий Валак</h4>
+                <h3>блог front-end разработчика</h3>
+                </div>
 
-            <div class="sidebar-links">
-                <ul>
-                    <li>
-                        <img src="css/images/icon/instagram%20(1)%201.svg" alt="Instagram">
-                        <a href="#"></a>
-                    </li>
-                    <li>
-                        <img src="css/images/icon/Group.png" alt="Vk">
-                        <a href="#"></a>
-                    </li>
-                    <li>
-                        <img src="css/images/icon/Group-2.png" alt="pinterest">
-                        <a href="#"></a>
-                    </li>
-                </ul>
-            </div>
+                <div class="sidebar-links">
+                    <ul>
+                        <li class="sidebar-links-li">
+                            <img src="css/images/icon/instagram%20(1)%201.svg" alt="Instagram">
+                            <a href="#"></a>
+                        </li>
+                        <li class="sidebar-links-li">
+                            <img src="css/images/icon/Group.png" alt="Vk">
+                            <a href="#"></a>
+                        </li class="sidebar-links-li">
+                        <li>
+                            <img src="css/images/icon/Group-2.png" alt="pinterest">
+                            <a href="#"></a>
+                        </li>
+                    </ul>
+                </div>
 
-            <p>Front-end разработчик. Практик верстки сайтов.
+                <p class="sidebar-desc">Front-end разработчик. Практик верстки сайтов.
 
-                Созданием сайтов занимаюсь с 2012 года. Работал в нескольких ИТ компаниях и наработал более 10 000 часов в создании сайтов различной сложности.</p>
-                <div class="sidebar-btn">
-                    <button class="left-btn" type="button">Мои работы</button>
-                    <button class="right-btn" type="button">Написать мне</button>
+                    Созданием сайтов занимаюсь с 2012 года. Работал в нескольких ИТ компаниях и наработал более 10 000 часов в создании сайтов различной сложности.</p>
+                    <div class="sidebar-btn">
+                        <button class="left-btn" type="button">Мои работы</button>
+                        <button class="right-btn" type="button">Написать мне</button>
+                    </div>
                 </div>
             </div>
+    <div>
+        <header class="header">
+            <div class="header-container">
+                <nav class="header-nav">
+                    <div class="header-links">
+                    <ul>
+                        <li><a href="#">главная</a></li>
+                        <li><a href="#">статьи</a></li>
+                        <li><a href="#">обо мне</a></li>
+                        <li><a href="#">реклама</a></li>
+                    </ul>
+                    </div>
+                    <div class="nav-input">
+                        <button><a href="#" class="prof-links">профиль</a></button>
+                        <input  type="text" placeholder="Поиск по блогу" />
+                    </div>
+                </nav>
+            </div>
+        </header>
 
+        <main class="main-container">
+            <div class="main-section">
+                <section class="picture-container">
+                    <img src="css/images/pic1.png" alt="">
+                    <img src="css/images/pic2.jpg" alt="">
+                    <img src="css/images/pic3.jpg" alt="">
+                    <img src="css/images/pic4.jpg" alt="">
+                </section>
+                <div class="main-input">
+                    <input class="main-input-container" type="text" placeholder="Напишите что-нибудь">
+                    <button class="main-btn" type="button">
+                        <img src="css/images/icon/photo%20btn.png" alt="">
+                    </button>
+                    <button class="main-btn" type="button">
+                        <img src="css/images/icon/send%20btn.png" alt="">
+                    </button>
+                </div>
 
-        </div>
-
-</sidebar>
+                <div class="main-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.</p>
+                </div>
+            </div>
+        </main>
+    </div>
+</div>
 </body>
 </html>
