--- a/PageTwo.html
+++ b/PageTwo.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
-    <link rel="stylesheet" href="css/PagTwoSidebar.css">
-    <link rel="stylesheet" href="css/PagTwoHeader.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/PagTwoMain.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -65,29 +67,31 @@
         </div>
     </header>
 
-
+    <main class="main-container">
     <div class="main-section">
+
     <section class="page-section">
         <div  class="btn-two">
-        <button class="btn-page-two">Вернуться назад</button>
-        <button class="btn-page-two">поделиться</button>
+        <a class="btn-page-two">Вернуться назад</a>
+        <a class="btn-page-two">поделиться</a>
         </div>
+        <div class="title-container">
         <h3 class="title-page-two">Как создавать сайты легко</h3>
         <h4 class="small-title"> 21.06.2020
             создание сайтов</h4>
+        </div>
         <p class="text-page-two"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.
 
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.</p>
         <img class="image-page-two" src="css/images/ITCode.png" alt="">
         <p class="text-page-two">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.</p>
 
-    </section>
+
 
             <div class="title-link-two">
                 <h3 class="title-page-two">Интересно почитать</h3>
             </div>
 
-        <section class="links-page-two">
             <div class="links-container">
                 <ul class="link">
                     <li class="links-information"><a>Как я сходил на FrontEnd Conf 2021</a></li>
@@ -96,9 +100,7 @@
                     <li class="links-information"><a>Купил новый ноутбук за 150 000 руб</a></li>
                 </ul>
             </div>
-        </section>
 
-        <section class="discussion-container">
             <h3 class="discussion-title">Обсуждение</h3>
 
             <div class="discussion-form">
@@ -106,27 +108,23 @@
                 <button class="discussion-btn">Отправить</button>
             </div>
 
-        </section>
 
             <div class="commets-container">
                 <div class="comment-one">
-                    <div>
                     <img class="author-avatar" src="css/images/avatar3.png" alt="">
                     <h3 class="author-name">Дмитрий Валак</h3>
                     </div>
-                    <p class="author-text">Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.</p>
-                    <a class="author-btn">ответить</a>
+                <div class="author-text">
+                    <p >Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.</p>
+                </div>
+                <div class="author-btn">
+                    <a>ответить</a>
+                </div>
                 </div>
 
-                <div>
-                    <img class="author-avatar2" src="css/images/avatar4.png" alt="">
-                    <h3 class="author-name">Джонни</h3>
-                </div>
-                <p class="author-text">Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.</p>
-                <a class="author-btn">ответить</a>
-            </div>
-            </div>
-
+    </section>
+    </div>
+    </main>
     </div>
 </div>
 
