--- a/Pagethree.html
+++ b/Pagethree.html
@@ -68,10 +68,10 @@
         </header>
 
         <main class="main-container">
-            <div class="page-three-title">
-                <h2>Результаты поиска “Создание сайта”</h2>
-            </div>
-            <div class="main-section">
+
+                <h2 class="page-three-title">Результаты поиска “Создание сайта”</h2>
+
+
 
                 <section class="main-code-post">
                     <div class="code-post">
@@ -116,9 +116,6 @@
                     </div>
 
                 </section>
-            </div>
-
-
         </main>
     </div>
 </div>
