--- a/regform.html
+++ b/regform.html
@@ -70,10 +70,8 @@
             <form>
                 <div class="form-wrapper">
                     <div class="form-container">
-                        <div class="title-form">
-                            <h4>Профиль</h4>
-                        </div>
-                        <div class="mb-3">
+                            <h4 class="title-form">Профиль</h4>
+                        <div class="registration-wrap">
                             <input type="email" class="form-login" placeholder="Александр Провостин" disabled>
                         </div>
                         <div class="mb-3">
